--- a/DocumentProcessor/DocumentProcessor.API/appsettings.json
+++ b/DocumentProcessor/DocumentProcessor.API/appsettings.json
@@ -5,5 +5,23 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/api/log.txt",
+          "rollingInterval": "Day",
+          "shared": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
+  }
 }
