--- a/DocumentProcessor/DocumentProcessor.API/DocumentProcessor.API.csproj
+++ b/DocumentProcessor/DocumentProcessor.API/DocumentProcessor.API.csproj
@@ -12,7 +12,12 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.5.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
@@ -24,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DocumentProcessor.Contracts\DocumentProcessor.Contracts.csproj" />
+    <ProjectReference Include="..\DocumentProcessor.Dao\DocumentProcessor.Dao.csproj" />
   </ItemGroup>
 
 </Project>
