--- a/DocumentProcessor/DocumentProcessor.Master/DocumentProcessor.Master.csproj
+++ b/DocumentProcessor/DocumentProcessor.Master/DocumentProcessor.Master.csproj
@@ -11,9 +11,11 @@
   <ItemGroup>
 	<PackageReference Include="MassTransit" Version="8.5.1" />
 	<PackageReference Include="MassTransit.RabbitMQ" Version="8.5.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.13" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Polly" Version="8.6.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     <PackageReference Include="Serilog" Version="4.3.0" />
 	<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
@@ -24,5 +26,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DocumentProcessor.Contracts\DocumentProcessor.Contracts.csproj" />
+    <ProjectReference Include="..\DocumentProcessor.Dao\DocumentProcessor.Dao.csproj" />
   </ItemGroup>
 </Project>
