--- a/DocumentProcessor/DocumentProcessor.Writer/DocumentProcessor.Writer.csproj
+++ b/DocumentProcessor/DocumentProcessor.Writer/DocumentProcessor.Writer.csproj
@@ -9,7 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="MassTransit" Version="8.5.1" />
+	<PackageReference Include="MassTransit.RabbitMQ" Version="8.5.1" />
+	<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+	<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+	<PackageReference Include="Serilog" Version="4.3.0" />
+	<PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+	<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+	<PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+	<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentProcessor.Dao\DocumentProcessor.Dao.csproj" />
   </ItemGroup>
 </Project>
