add: db connection string.

--- a/DocumentProcessor/DocumentProcessor.API/appsettings.json
+++ b/DocumentProcessor/DocumentProcessor.API/appsettings.json
@@ -23,5 +23,9 @@
       }
     ],
     "Enrich": [ "FromLogContext" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=mysql;port=3306;database=documentprocessor;user=dpuser;password=dppass"
+    // "DefaultConnection": "server=127.0.0.1;port=3306;database=documentprocessor;user=dpuser;password=dppass;sslmode=none;"
   }
 }
