--- a/DocumentProcessor/DocumentProcessor.Writer/appsettings.json
+++ b/DocumentProcessor/DocumentProcessor.Writer/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=mysql;port=3306;database=documentprocessor;user=dpuser;password=dppass"
   }
 }
