--- a/DocumentProcessor/DocumentProcessor.Dao/DocumentProcessor.Dao.csproj
+++ b/DocumentProcessor/DocumentProcessor.Dao/DocumentProcessor.Dao.csproj
@@ -15,6 +15,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.13" />
     <PackageReference Include="Microsoft.OData.Core" Version="8.3.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+    <PackageReference Include="MassTransit" Version="8.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DocumentProcessor.Contracts\DocumentProcessor.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
